--- a/index.html
+++ b/index.html
@@ -66,12 +66,7 @@
                         <p style="text-align:center">
                             Kai dot Yao at liverpool dot ac dot uk
                         </p>
-                        <p> I am a Ph.D. student (2019.12-2023.12) advised by Prof. <a
-                                href="https://scholar.google.com/citations?user=3l5B0joAAAAJ">Kaizhu Huang</a> and Prof. <a
-                                href="https://scholar.google.com/citations?user=c-x5M2QAAAAJ">Jie
-                            Sun</a> at <a
-                                href="https://www.liverpool.ac.uk">University of Liverpool</a>. I'm bachelor-straight-to-doctorate student and got full scholarship.
-                          My research background lies in computer vision and machine learning.
+                        <p> I'm a researcher in Ant Group working on federated learning. My research background lies in computer vision and transfer learning.
                         </p>
                         <p>
                             <i>
@@ -79,9 +74,11 @@
                                 <!-- Specifically, I am interested in building machine learning algorithms for visual tasks with minimum human supervision. -->
                             </i>
                         </p>
-                        I have been working on some research topics including unsupervised learning, domain
-                        generalization,
-                        domain adaptation, and image generation. Previously, I completed B.Eng. at Xi'an
+                        I did my PhD at at <a
+                                href="https://www.liverpool.ac.uk">University of Liverpool</a>, advised by Prof. <a
+                                href="https://scholar.google.com/citations?user=3l5B0joAAAAJ">Kaizhu Huang</a> and Prof. <a
+                                href="https://scholar.google.com/citations?user=c-x5M2QAAAAJ">Jie
+                            Sun</a>. Previously, I completed B.Eng. at Xi'an
                         Jiaotong-Liverpool University.
                         <p style="text-align:center">
                             <a href="data/CV.pdf">English CV</a> &nbsp/&nbsp
@@ -103,24 +100,26 @@
                     <td>
                         <heading>News</heading>
                         <ul>
+                            <li>DEC 2023 - Our papers accepted in AAAI24.
+                            </li>
                             <li>Aug 2023 - Our papers accepted as Oral Presentation in ACM CIKM2023.
                             </li>
                             <li>May 2023 - Our two journal papers accepted in IEEE TETCI and IJB.
                             </li>
-                            <li>Apr 2023 - Our two journal papers accepted. Meanwhile, I am starting a new open source project <a
-                                    href="https://github.com/Kaiseem/sd-webui-imageguard">ImageGuard</a>.
-                            </li>
-                            <li>Nov 2022 - Our conference paper accepted in AAAI'23. We propose a novel augmentation for
+
+
+
+                            <li><a href="javascript:toggle_vis('news')">show more</a></li>
+                            <div id="news" style="display:none">
+                                                            <li>Nov 2022 - Our conference paper accepted in AAAI'23. We propose a novel augmentation for
                                 medical image domain generalization.
                                 The code released at <a href="https://github.com/Kaiseem/SLAug">here</a>.
                             </li>
-                            <li>Jul 2022 - Our conference paper accepted in ECCV'22. We propose a novel hybrid
+                                                            <li>Jul 2022 - Our conference paper accepted in ECCV'22. We propose a novel hybrid
                                 vision-transformer-based GAN for image outpainting.
                                 The code released at <a href="https://github.com/Kaiseem/QueryOTR">here</a>.
                             </li>
 
-                            <li><a href="javascript:toggle_vis('news')">show more</a></li>
-                            <div id="news" style="display:none">
                                                             <li>Jun 2022 - Our journal paper accepted in IEEE-JBHI (IF: 7.0).</li>
                             <li>Dec 2021 - Our team PremiLab wins 5th in the Challenge <a
                                     href="https://www.sciencedirect.com/science/article/pii/S1361841522002560">CrossMoDa
@@ -150,6 +149,65 @@
                 </table>
                 <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
                     <tbody>
+
+                    <!----------------------------------- tta (aaai24) ------------------------------------------------->
+                    <tr>
+                        <td style="padding:20px;width:25%;vertical-align:middle">
+                            <div>
+                                    <img src='images/aaai24_tta.png' width="160">
+                            </div>
+
+                        </td>
+                        <td style="padding:20px;width:75%;vertical-align:middle">
+                            <a href="https://arxiv.org/pdf/2312.09486.pdf">
+                                <papertitle>Unraveling Batch Normalization for Realistic Test-Time Adaptation
+                                </papertitle>
+                            </a>
+                            <br>
+                            <a href="https://scholar.google.com/citations?user=E-Mcb5AAAAAJ">Zixian Su</a>,
+                            Jingwei Guo,
+                            <strong>Kai Yao</strong>,
+                            <a href="https://scholar.google.com/citations?user=A0Z8mKIAAAAJ">Xi Yang</a>,
+                            <a href="https://scholar.google.com/citations?user=qj66yXAAAAAJ">Qiufeng Wang</a>,
+                            <a href="https://scholar.google.com/citations?user=3l5B0joAAAAJ">Kaizhu Huang</a>,
+                            <br>
+                            <em>Association for the Advancement of Artificial Intelligence (AAAI)</em>, 2024
+                            <p></p>
+                            <p>
+                                A novel strategy for training-free test-time adaptation.
+                            </p>
+                        </td>
+                    </tr>
+
+
+                    <!----------------------------------- uda (cikm23) ------------------------------------------------->
+                    <tr bgcolor="#ffffd0">
+                        <td style="padding:20px;width:25%;vertical-align:middle">
+                            <div>
+                                    <img src='images/cikm23_uda.png' width="160">
+                            </div>
+
+                        </td>
+                        <td style="padding:20px;width:75%;vertical-align:middle">
+                            <a href="https://doi.org/10.1145/3583780.3614872">
+                                <papertitle>Explore Epistemic Uncertainty in Domain Adaptive Semantic Segmentation
+                                </papertitle>
+                            </a>
+                            <br>
+                            <strong>Kai Yao</strong>,
+                            <a href="https://scholar.google.com/citations?user=E-Mcb5AAAAAJ">Zixian Su</a>,
+                            <a href="https://scholar.google.com/citations?user=A0Z8mKIAAAAJ">Xi Yang</a>,
+                            <a href="https://scholar.google.com/citations?user=c-x5M2QAAAAJ">Jie Sun</a>,
+                            <a href="https://scholar.google.com/citations?user=3l5B0joAAAAJ">Kaizhu Huang</a>,
+                            <br>
+                            <em>ACM International Conference on Information and Knowledge Management (CIKM) Oral</em>, 2023
+                            <p></p>
+                            <p>
+                                A novel episteme-based framework for domain adaptive semantic segmentation.
+                            </p>
+                        </td>
+                    </tr>
+
 
                <!----------------------------------- review1 (IJB23) ------------------------------------------------->
                     <tr>
@@ -240,8 +298,8 @@
                             <br>
                             <a href="https://scholar.google.com/citations?user=E-Mcb5AAAAAJ">Zixian Su</a>,
                             <strong>Kai Yao</strong>,
-                            <a href="https://www.xjtlu.edu.cn/en/departments/academic-departments/intelligent-science/staff/xi-yang01">Xi Yang</a>,
-                            Qiufeng Wang,
+                            <a href="https://scholar.google.com/citations?user=A0Z8mKIAAAAJ">Xi Yang</a>,
+                            <a href="https://scholar.google.com/citations?user=qj66yXAAAAAJ">Qiufeng Wang</a>,,
                             Yuyao Yan,
                             <a href="https://scholar.google.com/citations?user=3l5B0joAAAAJ">Kaizhu Huang</a>,
                             <br>
@@ -273,7 +331,7 @@
                             Chengrui Zhang,
                             Mark Leach,
                             <a href="https://scholar.google.com/citations?user=3l5B0joAAAAJ">Kaizhu Huang</a>,
-                            Xi Yang
+                            <a href="https://scholar.google.com/citations?user=A0Z8mKIAAAAJ">Xi Yang</a>,
                             <br>
                             <em>Processes</em>, 2023
                             <p></p>
@@ -313,8 +371,8 @@
 
                             <a href="https://scholar.google.com/citations?user=E-Mcb5AAAAAJ">Zixian Su*</a>,
                             <strong>Kai Yao*</strong>,
-                            <a href="https://www.xjtlu.edu.cn/en/departments/academic-departments/intelligent-science/staff/xi-yang01">Xi Yang</a>,
-                            <a href="http://www.premilab.com/QiufengWANG.ashx">Qiufeng Wang</a>,
+                            <a href="https://scholar.google.com/citations?user=A0Z8mKIAAAAJ">Xi Yang</a>,
+                            <a href="http://www.premilab.com/QiufengWANG.ashx"><a href="https://scholar.google.com/citations?user=qj66yXAAAAAJ">Qiufeng Wang</a>,</a>,
                             <a href="https://scholar.google.com/citations?user=c-x5M2QAAAAJ">Jie Sun</a>,
                             <a href="https://scholar.google.com/citations?user=3l5B0joAAAAJ">Kaizhu Huang</a>
                             <br>
@@ -362,7 +420,7 @@
                             <br>
                             <strong>Kai Yao*</strong>,
                             <a href="https://scholar.google.com/citations?user=yYtjWX0AAAAJ">Penglei Gao*</a>,
-                            <a href="https://www.xjtlu.edu.cn/en/departments/academic-departments/intelligent-science/staff/xi-yang01">Xi Yang</a>,
+                            <a href="https://scholar.google.com/citations?user=A0Z8mKIAAAAJ">Xi Yang</a>,
                             <a href="https://scholar.google.com/citations?user=c-x5M2QAAAAJ">Jie Sun</a>,
                             Rui Zhang,
                             <a href="https://scholar.google.com/citations?user=3l5B0joAAAAJ">Kaizhu Huang</a>
@@ -414,7 +472,7 @@
                             <strong>Kai Yao*</strong>,
                             <a href="https://scholar.google.com/citations?user=E-Mcb5AAAAAJ">Zixian Su*</a>,
                             <a href="https://scholar.google.com/citations?user=3l5B0joAAAAJ">Kaizhu Huang</a>,
-                            <a href="https://www.xjtlu.edu.cn/en/departments/academic-departments/intelligent-science/staff/xi-yang01">Xi Yang</a>,
+                            <a href="https://scholar.google.com/citations?user=A0Z8mKIAAAAJ">Xi Yang</a>,
                             <a href="https://scholar.google.com/citations?user=c-x5M2QAAAAJ">Jie Sun</a>,
                             Amir Hussain,
                             Frans Coenen
@@ -659,7 +717,7 @@
                                 </papertitle>
                             </a>
                             <br>
-                            <a href="http://www.premilab.com/QiufengWANG.ashx">Qiufeng Wang</a>, <strong>Kai Yao</strong>, Rui Zhang, Amir Hussain, Kaizhu Huang
+                            <a href="http://www.premilab.com/QiufengWANG.ashx"><a href="https://scholar.google.com/citations?user=qj66yXAAAAAJ">Qiufeng Wang</a>,</a>, <strong>Kai Yao</strong>, Rui Zhang, Amir Hussain, Kaizhu Huang
                             <br>
                             <em>Neurocomputing</em>, 2020
                             <p></p>
