--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         <p style="text-align:center">
                             Kai dot Yao at liverpool dot ac dot uk
                         </p>
-                        <p> I'm a researcher in Ant Group working on federated learning. My research background lies in computer vision and transfer learning.
+                        <p> I'm a researcher in Ant Group working on privacy-preserving large fondationa models. Meanwhile, I am a PostDoc in University of Zhejiang advised by Prof. Jianke Zhu and CTO Wei Wang. My research background lies in computer vision and transfer learning.
                         </p>
                         <p>
                             <i>
@@ -299,7 +299,7 @@
                             <a href="https://scholar.google.com/citations?user=E-Mcb5AAAAAJ">Zixian Su</a>,
                             <strong>Kai Yao</strong>,
                             <a href="https://scholar.google.com/citations?user=A0Z8mKIAAAAJ">Xi Yang</a>,
-                            <a href="https://scholar.google.com/citations?user=qj66yXAAAAAJ">Qiufeng Wang</a>,,
+                            <a href="https://scholar.google.com/citations?user=qj66yXAAAAAJ">Qiufeng Wang</a>,
                             Yuyao Yan,
                             <a href="https://scholar.google.com/citations?user=3l5B0joAAAAJ">Kaizhu Huang</a>,
                             <br>
