--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 
                         </td>
                         <td style="padding:20px;width:75%;vertical-align:middle">
-                            <a href="https://arxiv.org/pdf/2312.09486.pdf">
+                            <a href="https://ojs.aaai.org/index.php/AAAI/article/view/29436">
                                 <papertitle>Unraveling Batch Normalization for Realistic Test-Time Adaptation
                                 </papertitle>
                             </a>
