--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         <p style="text-align:center">
                             Kai dot Yao at liverpool dot ac dot uk
                         </p>
-                        <p> I'm a researcher in Ant Group working on privacy-preserving large fondationa models. Meanwhile, I am a PostDoc in University of Zhejiang advised by Prof. Jianke Zhu and CTO Wei Wang. My research background lies in computer vision and transfer learning.
+                        <p> I'm a researcher in Ant Group working on privacy-preserving large fondationa models. Meanwhile, I am a PostDoc in University of Zhejiang advised by Prof. Jianke Zhu. My research background lies in computer vision and transfer learning.
                         </p>
                         <p>
                             <i>
@@ -75,10 +75,7 @@
                             </i>
                         </p>
                         I did my PhD at at <a
-                                href="https://www.liverpool.ac.uk">University of Liverpool</a>, advised by Prof. <a
-                                href="https://scholar.google.com/citations?user=3l5B0joAAAAJ">Kaizhu Huang</a> and Prof. <a
-                                href="https://scholar.google.com/citations?user=c-x5M2QAAAAJ">Jie
-                            Sun</a>. Previously, I completed B.Eng. at Xi'an
+                                href="https://www.liverpool.ac.uk">University of Liverpool</a>. Previously, I completed B.Eng. at Xi'an
                         Jiaotong-Liverpool University.
                         <p style="text-align:center">
                             <a href="data/CV.pdf">English CV</a> &nbsp/&nbsp
@@ -100,27 +97,30 @@
                     <td>
                         <heading>News</heading>
                         <ul>
+                            <li>SEP 2024 - Our papers accepted in EMNLP24 Findings.
+                            </li>
+                            <li>JUN 2024 - Our papers accepted in ECCV24.
+                            </li>
                             <li>DEC 2023 - Our papers accepted in AAAI24.
                             </li>
+
+                            <li><a href="javascript:toggle_vis('news')">show more</a></li>
+                            <div id="news" style="display:none">
                             <li>Aug 2023 - Our papers accepted as Oral Presentation in ACM CIKM2023.
                             </li>
                             <li>May 2023 - Our two journal papers accepted in IEEE TETCI and IJB.
                             </li>
-
-
-
-                            <li><a href="javascript:toggle_vis('news')">show more</a></li>
-                            <div id="news" style="display:none">
-                                                            <li>Nov 2022 - Our conference paper accepted in AAAI'23. We propose a novel augmentation for
+                                
+                            <li>Nov 2022 - Our conference paper accepted in AAAI'23. We propose a novel augmentation for
                                 medical image domain generalization.
                                 The code released at <a href="https://github.com/Kaiseem/SLAug">here</a>.
                             </li>
-                                                            <li>Jul 2022 - Our conference paper accepted in ECCV'22. We propose a novel hybrid
+                            <li>Jul 2022 - Our conference paper accepted in ECCV'22. We propose a novel hybrid
                                 vision-transformer-based GAN for image outpainting.
                                 The code released at <a href="https://github.com/Kaiseem/QueryOTR">here</a>.
                             </li>
 
-                                                            <li>Jun 2022 - Our journal paper accepted in IEEE-JBHI (IF: 7.0).</li>
+                            <li>Jun 2022 - Our journal paper accepted in IEEE-JBHI (IF: 7.0).</li>
                             <li>Dec 2021 - Our team PremiLab wins 5th in the Challenge <a
                                     href="https://www.sciencedirect.com/science/article/pii/S1361841522002560">CrossMoDa
                                 2021 (MICCAI workshop)</a>.
@@ -150,6 +150,54 @@
                 <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
                     <tbody>
 
+                    <!----------------------------------- ist (emnlp24) ------------------------------------------------->
+                    <tr>
+                        <td style="padding:20px;width:25%;vertical-align:middle">
+                            <div>
+                                    <img src='images/emnlp24_ist.png' width="160">
+                            </div>
+
+                        </td>
+                        <td style="padding:20px;width:75%;vertical-align:middle">
+                            <a href="https://ojs.aaai.org/index.php/AAAI/article/view/29436">
+                                <papertitle>Layer-wise Importance Matters: Less Memory for Better Performance in Parameter-efficient Fine-tuning of Large Language Models
+                                </papertitle>
+                            </a>
+                            <br>
+                            <strong>Kai Yao</strong>, Penglei Gao, Lichun Li, Yuan Zhao, Xiaofeng Wang, Wei Wang, Jianke Zhu
+                            <br>
+                            <em>Empirical Methods in Natural Language Processing (EMNLP) findings</em>, 2024
+                            <p></p>
+                            <p>
+                            </p>
+                        </td>
+                    </tr>
+
+                    <!----------------------------------- promptnucseg (eccv24) ------------------------------------------------->
+                    <tr>
+                        <td style="padding:20px;width:25%;vertical-align:middle">
+                            <div>
+                                    <img src='images/eccv24_promptnucseg.png' width="160">
+                            </div>
+
+                        </td>
+                        <td style="padding:20px;width:75%;vertical-align:middle">
+                            <a href="https://ojs.aaai.org/index.php/AAAI/article/view/29436">
+                                <papertitle>Unleashing the Power of Prompt-driven Nucleus Instance Segmentation
+                                </papertitle>
+                            </a>
+                            <br>
+                            Zhongyi Shui, Yunlong Zhang, <strong>Kai Yao</strong>, Chenglu Zhu, Yuxuan Sun, Lin Yang
+                            <br>
+                            <em>European Conference on Computer Vision (ECCV)</em>, 2024
+                            <p></p>
+                            <p>
+                            </p>
+                        </td>
+                    </tr>
+
+
+                        
                     <!----------------------------------- tta (aaai24) ------------------------------------------------->
                     <tr>
                         <td style="padding:20px;width:25%;vertical-align:middle">
